--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "\n========== nuxt ==========": "",
-    "build": "nuxt build",
-    "dev": "PORT=4001 nuxt dev",
+    "ampt:dev": "PORT=4001 nuxt dev",
+    "ampt:build": "nuxt build && ampt-nuxt-build",
     "debug": "PORT=4001 node --inspect=9229 ./node_modules/nuxi/bin/nuxi.mjs dev",
     "generate": "nuxt generate",
     "preview": "PORT=4001 nuxt preview",
@@ -15,19 +15,19 @@
     "ampt:deploy": "ampt deploy --region eu-west-1"
   },
   "dependencies": {
-    "@ampt/nuxt": "1.0.1",
+    "@ampt/nuxt": "1.0.1"
+  },
+  "devDependencies": {
     "@nuxtjs/tailwindcss": "6.8.0",
     "@sidebase/nuxt-auth": "0.6.0-beta.6",
     "ag-grid-community": "30.2.0",
     "ag-grid-vue3": "30.2.0",
-    "next-auth": "4.22.5",
-    "nuxt": "3.7.4",
-    "postcss-custom-properties": "13.3.2"
-  },
-  "devDependencies": {
     "autoprefixer": "10.4.16",
+    "next-auth": "4.22.5",
     "npm-run-all": "4.1.5",
+    "nuxt": "3.7.4",
     "postcss": "8.4.31",
+    "postcss-custom-properties": "13.3.2",
     "prettier": "3.0.3",
     "tailwindcss": "3.3.3"
   },
