--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
     "fix:prettier": "prettier \"**/*.{ts,js,cjs,mjs,jsx,json,css,md,html,vue}\" --write",
     "fix:lint": "eslint \"**/*.{js,cjs,mjs}\"",
     "\n========== deploy ==========": "",
-    "ampt:deploy": "ampt deploy --region eu-west-1",
+    "ampt:deploy": "ampt deploy",
     "\n========== scripts ==========": "",
     "ampt:seed": "node ./scripts/data/seed.mjs",
     "ampt:test": "node ./scripts/data/test.js"
   },
   "dependencies": {
-    "@ampt/data": "1.0.1",
-    "@ampt/nuxt": "1.0.1"
+    "@ampt/data": "1.0.10",
+    "@ampt/nuxt": "1.0.8"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "6.8.0",
-    "@sidebase/nuxt-auth": "0.6.0-beta.6",
-    "ag-grid-community": "30.2.0",
-    "ag-grid-vue3": "30.2.0",
+    "@nuxtjs/tailwindcss": "6.10.1",
+    "@sidebase/nuxt-auth": "0.6.1",
+    "ag-grid-community": "30.2.1",
+    "ag-grid-vue3": "30.2.1",
     "autoprefixer": "10.4.16",
     "next-auth": "4.22.5",
     "npm-run-all": "4.1.5",
-    "nuxt": "3.7.4",
+    "nuxt": "3.8.2",
     "postcss": "8.4.31",
     "postcss-custom-properties": "13.3.2",
-    "prettier": "3.0.3",
-    "tailwindcss": "3.3.3"
+    "prettier": "3.1.0",
+    "tailwindcss": "3.3.5"
   },
   "ampt": {
     "app": "ampt-nuxt-auth",
